--- a/readme
+++ b/readme
@@ -1,2 +1,4 @@
 ROBOTISのENGINEER KIT1 MAX-E1を使って、アールティの2足歩行競技会HAC"https://www.rt-shop.jp/blog/archives/10714"に
 出場できるよう改造するための3Dプリントデータです。
+
+部品表URL：https://docs.google.com/spreadsheets/d/1dzs9KITQIU8A4TWIY32w9mljXyFgnypVYkDSp1MVsZg/edit?usp=sharing
