--- a/readme
+++ b/readme
@@ -1,4 +1,7 @@
 ROBOTISのENGINEER KIT1 MAX-E1を使って、アールティの2足歩行競技会HAC"https://www.rt-shop.jp/blog/archives/10714"に
-出場できるよう改造するための3Dプリントデータです。
+出場できるよう改造するための各種データです。
+
+HAC用リファレンス機体システム図
+https://user-images.githubusercontent.com/26966556/71410819-1d787f80-268a-11ea-8272-6f5efadad3bf.png
 
 部品表URL：https://docs.google.com/spreadsheets/d/1dzs9KITQIU8A4TWIY32w9mljXyFgnypVYkDSp1MVsZg/edit?usp=sharing
